commit string