@@ -1,7 +1,7 @@
 package com.wzh.jvm;
 
 import java.util.ArrayList;
-
+// -Xmx4M -XX:+PrintGC -XX:+PrintGCDetails
 public class MemoryLeak {
     public static void main(String[] args) {
         ArrayList<String[]>stringList=new ArrayList();
